--- a/.config/i3/config
+++ b/.config/i3/config
@@ -211,7 +211,7 @@ for_window [title="qBittorrent"] floating enable border pixel 1
 
 #Autostart Application
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id picom --experimental-backends
+exec --no-startup-id picom --experimental-backends --vsync
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 
 #Tapping Enable
 exec xinput set-prop "ETPS/2 Elantech Touchpad" "libinput Tapping Enabled" 1 
