--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,3 +1,6 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["*"]
+    "coc.preferences.formatOnSaveFiletypes": ["*"],
+    "diagnostic.virtualText": true,
+    "prettier.tabWidth": 4,
+    "prettier.semi": false
 }
