--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -4,18 +4,18 @@
 # environment variables. Some entries may override variables
 # set by alacritty itself.
 env:
-    # TERM variable
-    #
-    # This value is used to set the `$TERM` environment variable for
-    # each instance of Alacritty. If it is not present, alacritty will
-    # check the local terminfo database and use `alacritty` if it is
-    # available, otherwise `xterm-256color` is used.
-    TERM: xterm-256color
-    LANG: "en_US.UTF-8"
-    LC_CTYPE: en_US.UTF-8
+  # TERM variable
+  #
+  # This value is used to set the `$TERM` environment variable for
+  # each instance of Alacritty. If it is not present, alacritty will
+  # check the local terminfo database and use `alacritty` if it is
+  # available, otherwise `xterm-256color` is used.
+  TERM: xterm-256color
+  LANG: "en_US.UTF-8"
+  LC_CTYPE: en_US.UTF-8
 
 window:
-    opacity: 0.95
+  opacity: 0.95
 # Window dimensions (changes require restart)
 #
 # Specified in number of columns/lines, not pixels.
@@ -35,8 +35,8 @@ window:
 # Blank space added around the window in pixels. This padding is scaled
 # by DPI and the specified value is always added at both opposing sides.
 padding:
-    x: 4
-    y: 4
+  x: 4
+  y: 4
 
 # Spread additional padding evenly around the terminal content.
 #dynamic_padding: false
@@ -83,108 +83,111 @@ title: Alacritty
 #multiplier: 3
 # Font configuration
 font:
-    # Normal (roman) font face
-    normal:
-        # Font family
-        #
-        # Default:
-        #   - (macOS) Menlo
-        #   - (Linux/BSD) monospace
-        #   - (Windows) Consolas
-        family: Mononoki Nerd Font
-
-        # The `style` can be specified to pick a specific face.
-        style: Regular
-
-    # Bold font face
-    #bold:
+  # Normal (roman) font face
+  normal:
     # Font family
     #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-    # The `style` can be specified to pick a specific face.
-    #style: Bold
-    # Italic font face
-    #italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-    # The `style` can be specified to pick a specific face.
-    #style: Italic
-    # Bold italic font face
-    #bold_italic:
-    # Font family
-    #
-    # If the bold italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-    # The `style` can be specified to pick a specific face.
-    #style: Bold Italic
-    # Point size
-    size: 12.0
+    # Default:
+    #   - (macOS) Menlo
+    #   - (Linux/BSD) monospace
+    #   - (Windows) Consolas
+    family: Mononoki Nerd Font
 
-    # Offset is the extra space around each character. `offset.y` can be thought of
-    # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-    #offset:
-    #  x: 0
-    #  y: 0
-    # Glyph offset determines the locations of the glyphs within their cells with
-    # the default being at the bottom. Increasing `x` moves the glyph to the right,
-    # increasing `y` moves the glyph upwards.
-    #glyph_offset:
-    #  x: 0
-    #  y: 0
-    # Thin stroke font rendering (macOS only)
-    #
-    # Thin strokes are suitable for retina displays, but for non-retina screens
-    # it is recommended to set `use_thin_strokes` to `false`
-    #
-    # macOS >= 10.14.x:
-    #
-    # If the font quality on non-retina display looks bad then set
-    # `use_thin_strokes` to `true` and enable font smoothing by running the
-    # following command:
-    #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
-    #
-    # This is a global setting and will require a log out or restart to take
-    # effect.
-    use_thin_strokes: true
+    # The `style` can be specified to pick a specific face.
+    style: Regular
+
+  # Bold font face
+  #bold:
+  # Font family
+  #
+  # If the bold family is not specified, it will fall back to the
+  # value specified for the normal font.
+  #family: monospace
+  # The `style` can be specified to pick a specific face.
+  #style: Bold
+  # Italic font face
+  #italic:
+  # Font family
+  #
+  # If the italic family is not specified, it will fall back to the
+  # value specified for the normal font.
+  #family: monospace
+  # The `style` can be specified to pick a specific face.
+  #style: Italic
+  # Bold italic font face
+  #bold_italic:
+  # Font family
+  #
+  # If the bold italic family is not specified, it will fall back to the
+  # value specified for the normal font.
+  #family: monospace
+  # The `style` can be specified to pick a specific face.
+  #style: Bold Italic
+  # Point size
+  size: 12.0
+
+  # Offset is the extra space around each character. `offset.y` can be thought of
+  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
+  #offset:
+  #  x: 0
+  #  y: 0
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increasing `x` moves the glyph to the right,
+  # increasing `y` moves the glyph upwards.
+  #glyph_offset:
+  #  x: 0
+  #  y: 0
+  # Thin stroke font rendering (macOS only)
+  #
+  # Thin strokes are suitable for retina displays, but for non-retina screens
+  # it is recommended to set `use_thin_strokes` to `false`
+  #
+  # macOS >= 10.14.x:
+  #
+  # If the font quality on non-retina display looks bad then set
+  # `use_thin_strokes` to `true` and enable font smoothing by running the
+  # following command:
+  #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
+  #
+  # This is a global setting and will require a log out or restart to take
+  # effect.
+  use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 # Colors (Tomorrow Night Bright)
 colors:
-    # Default colors
-    primary:
-        background: "#282c34"
-        foreground: "#abb2bf"
+  # Default colors
+  primary:
+    background: '#212121'
+    foreground: '#c0c5ce'
+    bright_foreground: '#f3f4f5'
 
-    # Normal colors
-    normal:
-        # NOTE: Use '#131613' for the `black` color if you'd like to see
-        # black text on the background.
-        black: "#282c34"
-        red: "#e06c75"
-        green: "#98c379"
-        yellow: "#d19a66"
-        blue: "#61afef"
-        magenta: "#c678dd"
-        cyan: "#56b6c2"
-        white: "#abb2bf"
+  cursor:
+    text: '#212121'
+    cursor: '#c0c5ce'
 
-    # Bright colors
-    bright:
-        black: "#5c6370"
-        red: "#e06c75"
-        green: "#98c379"
-        yellow: "#d19a66"
-        blue: "#61afef"
-        magenta: "#c678dd"
-        cyan: "#56b6c2"
-        white: "#ffffff"
+  # Normal colors
+  normal:
+    black: '#212121'
+    red: '#e57373'
+    green: '#a6bc69'
+    yellow: '#fac863'
+    blue: '#6699cc'
+    magenta: '#c594c5'
+    cyan: '#5fb3b3'
+    white: '#c0c5ce'
+
+  # Bright colors
+  bright:
+    black: '#5c5c5c'
+    red: '#e57373'
+    green: '#a6bc69'
+    yellow: '#fac863'
+    blue: '#6699cc'
+    magenta: '#c594c5'
+    cyan: '#5fb3b3'
+    white: '#f3f4f5'
 # Visual Bell
 #
 # Any time the BEL code is received, Alacritty "rings" the visual bell. Once
@@ -215,7 +218,8 @@ colors:
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
 #window.opacity: 0.94
-theme: One-Dark
+theme: Oxide
+
 #selection:
 #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
 # When set to `true`, selected text will be copied to the primary clipboard.
