--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -159,35 +159,32 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#212121'
-    foreground: '#c0c5ce'
-    bright_foreground: '#f3f4f5'
-
-  cursor:
-    text: '#212121'
-    cursor: '#c0c5ce'
+    background: '#282c34'
+    foreground: '#abb2bf'
 
   # Normal colors
   normal:
-    black: '#212121'
-    red: '#e57373'
-    green: '#a6bc69'
-    yellow: '#fac863'
-    blue: '#6699cc'
-    magenta: '#c594c5'
-    cyan: '#5fb3b3'
-    white: '#c0c5ce'
+    # NOTE: Use '#131613' for the `black` color if you'd like to see
+    # black text on the background.
+    black: '#282c34'
+    red: '#e06c75'
+    green: '#98c379'
+    yellow: '#d19a66'
+    blue: '#61afef'
+    magenta: '#c678dd'
+    cyan: '#56b6c2'
+    white: '#abb2bf'
 
   # Bright colors
   bright:
-    black: '#5c5c5c'
-    red: '#e57373'
-    green: '#a6bc69'
-    yellow: '#fac863'
-    blue: '#6699cc'
-    magenta: '#c594c5'
-    cyan: '#5fb3b3'
-    white: '#f3f4f5'
+    black: '#5c6370'
+    red: '#e06c75'
+    green: '#98c379'
+    yellow: '#d19a66'
+    blue: '#61afef'
+    magenta: '#c678dd'
+    cyan: '#56b6c2'
+    white: '#ffffff'
 # Visual Bell
 #
 # Any time the BEL code is received, Alacritty "rings" the visual bell. Once
@@ -218,7 +215,7 @@ colors:
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
 #window.opacity: 0.94
-theme: Oxide
+theme: One-Dark
 
 #selection:
 #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
