betterlockscreen and indentline

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,7 +25,7 @@ font pango:FiraCode Nerd Font 9
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-bindsym $mod+Escape exec i3lock -u -i Pictures/wallpapers/0102.jpg
+bindsym $mod+Escape exec betterlockscreen -l dim  
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
@@ -164,8 +164,7 @@ bindsym $mod+ctrl+e exec shutdown now
 bindsym $mod+p exec nautilus&
 
 #sleep & lock
-bindsym $mod+ctrl+s exec systemctl suspend -i && exec i3lock -u -i Pictures/wallpapers/0102.jpg
-
+bindsym $mod+ctrl+s exec systemctl suspend -i 
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
