--- a/.config/i3/config
+++ b/.config/i3/config
@@ -217,7 +217,7 @@ for_window [title="Volume Control"] floating enable border pixel 1
 for_window [title="qBittorrent"] floating enable border pixel 1
 for_window [title="Calculator"] floating enable border pixel 1
 for_window [title="kitty"] floating enable border pixel 1
-#for_window [title=" "] floating enable border pixel 1
+for_window [title="Insomnia"] floating enable border pixel 1
 
 #Autostart Application
 exec --no-startup-id nitrogen --restore
