--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,15 @@
+unbind C-Space
+set -g prefix C-Space
+bind C-Space send-prefix
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -s escape-time 0
 set -g base-index 1
+
+bind v split-window -hc "#{pane_current_path}"
+bind h split-window -vc "#{pane_current_path}"
+
+bind -r C-j resize-pane -D 15
+bind -r C-k resize-pane -U 15
+bind -r C-h resize-pane -L 15
+bind -r C-l resize-pane -R 15
