TMUX IS THE GOTO

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -s escape-time 0
 set -g base-index 1
+set -g mouse on
 
 bind v split-window -hc "#{pane_current_path}"
 bind h split-window -vc "#{pane_current_path}"
